--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -4,3 +4,4 @@ Copyright © 2016 Oliver Zick. All rights reserved.
 Version 1.0.0:
 
 	- Issue #1: Enable matching instances of reference types to be same
+	- Issue #2: Enable matching an instance to be any
