--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -5,3 +5,4 @@ Version 1.0.0:
 
 	- Issue #1: Enable matching instances of reference types to be same
 	- Issue #2: Enable matching an instance to be any
+	- Issue #3: Enable matching an instance to be equal
