--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -7,3 +7,4 @@ Version 1.0.0:
 	- Issue #2: Enable matching an instance to be any
 	- Issue #3: Enable matching an instance to be equal
 	- Issue #4: Enable matching an instance to be greater than another instance
+	- Issue #5: Enable matching an instance to be less than another instance
