--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -9,3 +9,4 @@ Version 1.0.0:
 	- Issue #4: Enable matching an instance to be greater than another instance
 	- Issue #5: Enable matching an instance to be less than another instance
 	- Issue #6: Enable matching an instance to be null
+	- Issue #7: Enable matching always
