--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -11,3 +11,4 @@ Version 1.0.0:
 	- Issue #6: Enable matching an instance to be null
 	- Issue #7: Enable matching always
 	- Issue #8: Enable matching never
+	- Issue #9: Enable matching an instance to be greater than or equal to another instance
