--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -13,3 +13,4 @@ Version 1.0.0:
 	- Issue #8: Enable matching never
 	- Issue #9: Enable matching an instance to be greater than or equal to another instance
 	- Issue #10: Enable matching an instance to be less than or equal to another instance
+	- Issue #12: Enable match that determines whether an instance matches all given matches
