--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -15,3 +15,4 @@ Version 1.0.0:
 	- Issue #10: Enable match that determines whether an instance is less than or equal to a given instance
 	- Issue #12: Enable match that determines whether an instance matches all given matches
 	- Issue #13: Enable match that determines whether an instance is not null
+	- Issue #14: Enable match that determines whether an instance is not same as a given instance
