Resolve #16: Enable match that determines whether an instance matches none given matches

--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -17,3 +17,4 @@ Version 1.0.0:
 	- Issue #13: Enable match that determines whether an instance is not null
 	- Issue #14: Enable match that determines whether an instance is not same as a given instance
 	- Issue #15: Enable match that determines whether an instance does not equal a given instance
+	- Issue #16: Enable match that determines whether an instance matches none given matches
