Resolve #17: Support .NET Framework 4.6

--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -18,3 +18,4 @@ Version 1.0.0:
 	- Issue #14: Enable match that determines whether an instance is not same as a given instance
 	- Issue #15: Enable match that determines whether an instance does not equal a given instance
 	- Issue #16: Enable match that determines whether an instance matches none given matches
+	- Issue #17: Support .NET Framework 4.6
