--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -3,6 +3,7 @@ Copyright © 2016 Oliver Zick. All rights reserved.
 
 Version 1.1.0:
 
+	- Issue #22: Rename match 'None' to 'Except'; mark 'None' as obsolete
 	- Issue #23: Enable custom matches
 
 Version 1.0.0:
