--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -1,6 +1,10 @@
 Delizious Filtering Library
 Copyright © 2016 Oliver Zick. All rights reserved.
 
+Version 1.2.0:
+
+	- Issue #24: Implement immutability with value semantics for matches
+
 Version 1.1.0:
 
 	- Issue #22: Rename match 'None' to 'Except'; mark 'None' as obsolete
