Resolve #30: Upgrade to .NET 6

--- a/src/Changelog.txt
+++ b/src/Changelog.txt
@@ -1,6 +1,10 @@
 Delizious Filtering Library
 Copyright © 2016-2022 Oliver Zick. All rights reserved.
 
+Version 4.0.0:
+
+	- #30: Upgrade to .NET 6
+
 Version 3.0.0:
 
 	- #27: Upgrade to .NET 5
